--- a/SourceTools/VisualCPP/libs.tmpl
+++ b/SourceTools/VisualCPP/libs.tmpl
@@ -33,7 +33,7 @@ RSC=rc.exe
 # PROP Use_MFC 0
 # PROP Use_Debug_Libraries 0
 # PROP Output_Dir "$(ProjectOut)\win32\opt\lib"
-# PROP Intermediate_Dir "$(ProjectOut)\win32\opt\obj"
+# PROP Intermediate_Dir "$(ProjectOut)\win32\opt\obj\$(target)"
 # PROP Target_Dir ""
 # ADD CPP /nologo /W3 /GR /GX /MD /O2 $(ExtraInclude) /I "$(ProjectOut)\inc\Win32\" /I "$(ProjectOut)\inc\" /D "NDEBUG" /D "_LIB" /D "VISUAL_CPP" /D "WIN32" /D "RAVL_USE_GTK2" /D "_MBCS" /YX /FD /TP /c
 # ADD BASE RSC /l 0x809
@@ -48,7 +48,7 @@ LIB32=link.exe -lib
 # PROP Use_MFC 0
 # PROP Use_Debug_Libraries 1
 # PROP Output_Dir "$(ProjectOut)\win32\debug\lib"
-# PROP Intermediate_Dir "$(ProjectOut)\win32\debug\obj"
+# PROP Intermediate_Dir "$(ProjectOut)\win32\debug\obj\$(target)"
 # PROP Target_Dir ""
 # ADD CPP /nologo /W3 /Gm /GR /GX /ZI /Od /MDd $(ExtraInclude) /I "$(ProjectOut)\inc\Win32\" /I "$(ProjectOut)\inc\" /D "_DEBUG" /D "VISUAL_CPP" /D "_LIB" /D "WIN32" /D "RAVL_USE_GTK2" /D "_MBCS" /YX /FD /TP /GZ /c
 # ADD BASE RSC /l 0x809
