--- a/SourceTools/VisualCPP/tests.tmpl
+++ b/SourceTools/VisualCPP/tests.tmpl
@@ -33,7 +33,7 @@ RSC=rc.exe
 # PROP Use_MFC 0
 # PROP Use_Debug_Libraries 0
 # PROP Output_Dir "$(Back_ProjectOut)\win32\bin"
-# PROP Intermediate_Dir "$(Back_ProjectOut)\win32\opt\obj"
+# PROP Intermediate_Dir "$(Back_ProjectOut)\win32\opt\obj\$(target)"
 # PROP Target_Dir ""
 # ADD CPP /nologo /W3 /GR /GX /MD /O2 /I "$(Back_ProjectOut)\inc\Win32\" /I "$(Back_ProjectOut)\inc\" /D "NDEBUG" /D "VISUAL_CPP" /D "_CONSOLE" /D "WIN32" /D "_MBCS" /YX /FD /TP /c
 # ADD RSC /l 0x809 /d "NDEBUG"
@@ -47,7 +47,7 @@ LINK32=link.exe
 # PROP Use_MFC 0
 # PROP Use_Debug_Libraries 1
 # PROP Output_Dir "$(Back_ProjectOut)\win32\bin"
-# PROP Intermediate_Dir "$(Back_ProjectOut)\win32\debug\obj"
+# PROP Intermediate_Dir "$(Back_ProjectOut)\win32\debug\obj\$(target)"
 # PROP Target_Dir ""
 # ADD CPP /nologo /W3 /Gm /GR /GX /ZI /MDd /Od /I "$(Back_ProjectOut)\inc\Win32\" /I "$(Back_ProjectOut)\inc\" /D "_DEBUG" /D "VISUAL_CPP" /D "_CONSOLE" /D "WIN32" /D "_MBCS" /YX /FD /GZ /TP /c
 # ADD RSC /l 0x809 /d "_DEBUG"
