--- a/SourceTools/VisualCPP/mains.tmpl
+++ b/SourceTools/VisualCPP/mains.tmpl
@@ -35,7 +35,7 @@ RSC=rc.exe
 # PROP Output_Dir "$(Back_ProjectOut)\win32\bin"
 # PROP Intermediate_Dir "$(Back_ProjectOut)\win32\opt\obj\$(target)"
 # PROP Target_Dir ""
-# ADD CPP /nologo /W3 /GR /GX /MD /O2 $(ExtraInclude) /I "$(Back_ProjectOut)\inc\Win32\" /I "$(Back_ProjectOut)\inc\" /D "NDEBUG" /D "VISUAL_CPP" /D "_CONSOLE" /D "WIN32" /D "RAVL_USE_GTK2" /D "_MBCS" /YX /FD /TP /c
+# ADD CPP /nologo /W3 /GR /GX /MD /O2 $(ExtraInclude) /I "$(Back_ProjectOut)\inc\Win32\" /I "$(Back_ProjectOut)\inc\" /D "NDEBUG" /D "VISUAL_CPP" /D "_CONSOLE" /D "WIN32" /D "RAVL_USE_GTK" /D "_MBCS" /YX /FD /TP /c
 # ADD RSC /l 0x809 /d "NDEBUG"
 BSC32=bscmake.exe
 # ADD BSC32 /nologo
@@ -49,7 +49,7 @@ LINK32=link.exe
 # PROP Output_Dir "$(Back_ProjectOut)\win32\bin"
 # PROP Intermediate_Dir "$(Back_ProjectOut)\win32\debug\obj\$(target)"
 # PROP Target_Dir ""
-# ADD CPP /nologo /W3 /Gm /GR /GX /ZI /MDd /Od $(ExtraInclude) /I "$(Back_ProjectOut)\inc\Win32\" /I "$(Back_ProjectOut)\inc\" /D "_DEBUG" /D "VISUAL_CPP" /D "_CONSOLE" /D "WIN32" /D "RAVL_USE_GTK2" /D "_MBCS" /YX /FD /GZ /TP /c
+# ADD CPP /nologo /W3 /Gm /GR /GX /ZI /MDd /Od $(ExtraInclude) /I "$(Back_ProjectOut)\inc\Win32\" /I "$(Back_ProjectOut)\inc\" /D "_DEBUG" /D "VISUAL_CPP" /D "_CONSOLE" /D "WIN32" /D "RAVL_USE_GTK" /D "_MBCS" /YX /FD /GZ /TP /c
 # ADD RSC /l 0x809 /d "_DEBUG"
 BSC32=bscmake.exe
 # ADD BSC32 /nologo
