Don't overwrite guid's
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@5968 7226f50c-d813-0410-99bf-979b288ab488

--- a/SourceTools/AutoPort2/exampleProgram.guid.tmpl
+++ b/SourceTools/AutoPort2/exampleProgram.guid.tmpl
@@ -1,1 +1,1 @@
-$(FileObject:examples)$(FilePattern:GUID/%.guid){$(topandtail:$(shell:uuidgen))}
+$(FileObject:newexamples)$(FilePattern:GUID/%.guid){$(topandtail:$(shell:uuidgen))}
