--- a/SourceTools/AutoPort2/mainProgram.guid.tmpl
+++ b/SourceTools/AutoPort2/mainProgram.guid.tmpl
@@ -1,1 +1,1 @@
-$(FileObject:mains)$(FilePattern:GUID/%.guid){$(topandtail:$(shell:uuidgen))}
+$(FileObject:newmains)$(FilePattern:GUID/%.guid){$(topandtail:$(shell:uuidgen))}
