--- a/SourceTools/AutoPort2/testProgram.guid.tmpl
+++ b/SourceTools/AutoPort2/testProgram.guid.tmpl
@@ -1,1 +1,1 @@
-$(FileObject:tests)$(FilePattern:GUID/%.guid){$(topandtail:$(shell:uuidgen))}
+$(FileObject:newtests)$(FilePattern:GUID/%.guid){$(topandtail:$(shell:uuidgen))}
