Change the name of the solution file to Ravl.sln
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@5987 7226f50c-d813-0410-99bf-979b288ab488

--- a/SourceTools/AutoPort2/sln.tmpl
+++ b/SourceTools/AutoPort2/sln.tmpl
@@ -1,4 +1,4 @@
-$(FileObject:one)$(FilePattern:proj.sln)Microsoft Visual Studio Solution File, Format Version 9.00
+$(FileObject:one)$(FilePattern:Ravl.sln)Microsoft Visual Studio Solution File, Format Version 9.00
 # Visual Studio 2005
 $(forall:libs:Project("$(topandtail:$(include:@MSVC/GUID/Solution.sguid))") = "$(libname)", "$(libname).vcproj", "$(topandtail:$(include:@MSVC/GUID/$(libname).guid))"
 $(ifany:useslibs:	ProjectSection(ProjectDependencies) = postProject 
