Some broken links mended, I hope
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6045 7226f50c-d813-0410-99bf-979b288ab488

--- a/SourceTools/CxxDoc/Templates/Class/index.tmpl
+++ b/SourceTools/CxxDoc/Templates/Class/index.tmpl
@@ -2,6 +2,7 @@ $(FileObject:one)$(FilePattern:index.html)
 <html><head><TITLE>Cxx Index</TITLE><BASE TARGET="_parent" ></head>
 <body BGCOLOR=#FFFFFF>
 
+$(set:toroot=.)
 $(include:topbar.stmpl)
 
 &nbsp;<p>
