--- a/SourceTools/CxxDoc/Templates/Class/develop.index.tmpl
+++ b/SourceTools/CxxDoc/Templates/Class/develop.index.tmpl
@@ -2,6 +2,7 @@ $(FileObject:one)$(FilePattern:Develop/index.html)
 <html><head><TITLE>Class List</TITLE><BASE TARGET="_parent" ></head>
 <body BGCOLOR=#FFFFFF>
 
+$(set:toroot=..)
 $(include:topbar.stmpl)
 
 &nbsp;<p>
