2 more link errors
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6046 7226f50c-d813-0410-99bf-979b288ab488

--- a/SourceTools/CxxDoc/Templates/Class/basic.tmpl
+++ b/SourceTools/CxxDoc/Templates/Class/basic.tmpl
@@ -2,6 +2,7 @@ $(FileObject:one)$(FilePattern:Index/basic.html)
 <html><head><TITLE>List of Basic Classes</TITLE><BASE TARGET="_parent" ></head>
 <body BGCOLOR=#FFFFFF>
 
+$(set:toroot=..)
 $(include:topbar.stmpl)
 
 &nbsp;<p>
