--- a/SourceTools/CxxDoc/Templates/Class/bugs.tmpl
+++ b/SourceTools/CxxDoc/Templates/Class/bugs.tmpl
@@ -2,6 +2,7 @@ $(FileObject:one)$(FilePattern:Index/bugs.html)
 <html><head><TITLE>List of Buggy Classes</TITLE><BASE TARGET="_parent" ></head>
 <body BGCOLOR=#FFFFFF>
 
+$(set:toroot=..)
 $(include:topbar.stmpl)
 
 &nbsp;<p>
