Replaced sf links with relative ones
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6054 7226f50c-d813-0410-99bf-979b288ab488

--- a/SourceTools/CxxDoc/Templates/DocNode/sitemap.tmpl
+++ b/SourceTools/CxxDoc/Templates/DocNode/sitemap.tmpl
@@ -12,12 +12,10 @@ RAVL, Recognition And Vision Library</b></FONT></td></tr></table>
 $(//: *********************** top bar ***************************** )
 
 <table width=100% bgcolor="#C0C0C0"><tr>
-<!-- <td width=25% align="middle" border=2><font size="-1" face="helvetica,arial">
-<a href="http://ravl.sourceforge.net"><B>HOME PAGE</B></a></font></td> -->
 <td width=33% align="middle"><font size="-1" face="helvetica,arial">
-<a href="http://ravl.sourceforge.net"><B>HOME PAGE</B></a></font></td>
+<a href="Basic/Tree/Ravl.html"><B>HOME PAGE</B></a></font></td>
 <td width=33% align="middle"><font size="-1" face="helvetica,arial">
-<a href="http://ravl.sourceforge.net/share/doc/RAVL/Auto/Basic/index.html"><B>CLASS LIST</B></a></font></td>
+<a href="Basic/index.html"><B>CLASS LIST</B></a></font></td>
 <td width=33% align="middle"><font size="-1" face="helvetica,arial">
 <B>CONTENTS</B></font></td>
 </tr></table>
