trying to get auto compile to work on windoze
git-svn-id: https://ravl.svn.sourceforge.net/svnroot/ravl/main/Ravl@6589 7226f50c-d813-0410-99bf-979b288ab488

--- a/SourceTools/AutoPort2/makefile.tmpl
+++ b/SourceTools/AutoPort2/makefile.tmpl
@@ -27,16 +27,16 @@ OPTOBJDIR = $(ProjectOut)/win32/opt/obj/$(libname)
 OPTLIBDIR = $(ProjectOut)/win32/opt/lib
 
 
-opt:: setup $(forall:sources: $$(OPTOBJDIR)/$(objectfile:$(filename)))
+opt:: setup$(libname) $(forall:sources: $$(OPTOBJDIR)/$(objectfile:$(filename)))
 	@echo -- making $$(OPTLIBDIR)/$(libname).lib
 	$$(LD) /NOLOGO /out:$$(OPTLIBDIR)/$(libname).lib $$(OPTOBJDIR)/*.obj
 
 
-debug:: setup $(forall:sources: $$(DEBUGOBJDIR)/$(objectfile:$(filename))) 
+debug:: setup$(libname) $(forall:sources: $$(DEBUGOBJDIR)/$(objectfile:$(filename))) 
 	@echo -- making $$(DEBUGLIBDIR)/$(libname).lib
 	$$(LD) /NOLOGO /out:$$(DEBUGLIBDIR)/$(libname).lib $$(DEBUGOBJDIR)/*.obj
 
-setup::
+setup$(libname)::
         echo --- creating dir for $(libname)
         @if not exist "$$(DEBUGOBJDIR)" mkdir "$$(DEBUGOBJDIR)"
         @if not exist "$$(DEBUGLIBDIR)" mkdir "$$(DEBUGLIBDIR)"
