--- a/SourceTools/AutoPort2/vcproj.tmpl
+++ b/SourceTools/AutoPort2/vcproj.tmpl
@@ -44,6 +44,7 @@ if not exist $(ProjectOut)\$(dos:$(auxdir))\NUL mkdir $(ProjectOut)\$(dos:$(auxd
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+                        AdditionalOptions="/MP"
 				Optimization="0"
 				AdditionalIncludeDirectories="include\Win32;include$(ExtraInclude)"
 				PreprocessorDefinitions="_DEBUG;VISUAL_CPP;_LIB;WIN32;RAVL_USE_GTK2=1;RAVL_CHECK=1;PROJECT_OUT=\&quot;$(subst:\:\\:$(ProjectOut))\&quot;"
@@ -54,11 +55,12 @@ if not exist $(ProjectOut)\$(dos:$(auxdir))\NUL mkdir $(ProjectOut)\$(dos:$(auxd
 				PrecompiledHeaderFile="$(ProjectOut)\win32\debug\obj\$(libname)\$(libname).pch"
 				AssemblerListingLocation="$(ProjectOut)\win32\debug\obj\$(libname)\"
 				ObjectFile="$(ProjectOut)\win32\debug\obj\$(libname)\"
-				ProgramDataBaseFileName="$(ProjectOut)\win32\debug\obj\$(libname)\"
+				ProgramDataBaseFileName="$(ProjectOut)\win32\debug\lib\$(libname).pdb"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="4"
+                        DisableSpecificWarnings="4996"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -120,6 +122,7 @@ if not exist $(ProjectOut)\$(dos:$(auxdir))\NUL mkdir $(ProjectOut)\$(dos:$(auxd
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+                        AdditionalOptions="/MP"
 				Optimization="2"
 				InlineFunctionExpansion="1"
 				AdditionalIncludeDirectories="include\Win32;include$(ExtraInclude)"
@@ -131,10 +134,11 @@ if not exist $(ProjectOut)\$(dos:$(auxdir))\NUL mkdir $(ProjectOut)\$(dos:$(auxd
 				PrecompiledHeaderFile="$(ProjectOut)\win32\opt\obj\$(libname)/$(libname).pch"
 				AssemblerListingLocation="$(ProjectOut)\win32\opt\obj\$(libname)\"
 				ObjectFile="$(ProjectOut)\win32\opt\obj\$(libname)\"
-				ProgramDataBaseFileName="$(ProjectOut)\win32\opt\obj\$(libname)\"
+				ProgramDataBaseFileName="$(ProjectOut)\win32\opt\lib\$(libname).pdb"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="false"
 				SuppressStartupBanner="true"
+                        DisableSpecificWarnings="4996"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
