--- a/SourceTools/Hudson/vcproj.tmpl
+++ b/SourceTools/Hudson/vcproj.tmpl
@@ -24,7 +24,7 @@ $(FileObject:lib)$(FilePattern:%.vcproj)<?xml version="1.0" encoding="Windows-12
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				CommandLine="$(forall:headers:if not exist $(ProjectOut)\include\$(dos:$(package)) mkdir $(ProjectOut)\include\$(dos:$(package))&#x0D;&#x0A;copy ..\$(dos:$(filename)) $(ProjectOut)\include\$(dos:$(package))&#x0D;&#x0A;)$(ifany:auxfiles:$(forall:auxfiles:if not exist $(ProjectOut)\$(dos:$(auxdir))\NUL mkdir $(ProjectOut)\$(dos:$(auxdir))&#x0D;&#x0A;copy ..\$(dos:$(filename)) $(ProjectOut)\$(dos:$(auxdir))\$(rootname)&#x0D;&#x0A;))"
+				CommandLine="$(forall:headers:if not exist $(ProjectOut)\include\$(dos:$(package)) mkdir $(ProjectOut)\include\$(dos:$(package))&#x0D;&#x0A;copy ..\$(dos:$(filename)) $(ProjectOut)\include\$(dos:$(package))&#x0D;&#x0A;)$(ifany:auxfiles:$(forall:auxfiles:if not exist $(ProjectOut)\$(dos:$(auxdir)) mkdir $(ProjectOut)\$(dos:$(auxdir))&#x0D;&#x0A;copy ..\$(dos:$(filename)) $(ProjectOut)\$(dos:$(auxdir))\$(rootname)&#x0D;&#x0A;))"
 />
 			<Tool
 				Name="VCCustomBuildTool"
@@ -43,8 +43,9 @@ $(FileObject:lib)$(FilePattern:%.vcproj)<?xml version="1.0" encoding="Windows-12
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+                        AdditionalOptions="/MP"
 				Optimization="0"
-				AdditionalIncludeDirectories="include\Win32;include$(ExtraInclude)"
+				AdditionalIncludeDirectories="include\Win32;include;..\..\build\include;..\..\build\include\Win32$(ExtraInclude)"
 				PreprocessorDefinitions="_DEBUG;VISUAL_CPP;_LIB;WIN32;RAVL_USE_GTK2=1;RAVL_CHECK=1;PROJECT_OUT=\&quot;$(subst:\:\\:$(ProjectOut))\&quot;"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -53,11 +54,12 @@ $(FileObject:lib)$(FilePattern:%.vcproj)<?xml version="1.0" encoding="Windows-12
 				PrecompiledHeaderFile="$(ProjectOut)\win32\debug\obj\$(libname)\$(libname).pch"
 				AssemblerListingLocation="$(ProjectOut)\win32\debug\obj\$(libname)\"
 				ObjectFile="$(ProjectOut)\win32\debug\obj\$(libname)\"
-				ProgramDataBaseFileName="$(ProjectOut)\win32\debug\obj\$(libname)\"
+				ProgramDataBaseFileName="$(ProjectOut)\win32\debug\lib\$(libname).pdb"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="4"
+                        DisableSpecificWarnings="4996"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -73,6 +75,7 @@ $(FileObject:lib)$(FilePattern:%.vcproj)<?xml version="1.0" encoding="Windows-12
 			<Tool
 				Name="VCLibrarianTool"
 				OutputFile="$(ProjectOut)\win32\debug\lib\$(libname).lib"
+                        AdditionalOptions="/IGNORE:4221"
 				SuppressStartupBanner="true"
 			/>
 			<Tool
@@ -102,7 +105,7 @@ $(FileObject:lib)$(FilePattern:%.vcproj)<?xml version="1.0" encoding="Windows-12
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
-				CommandLine="$(forall:headers:if not exist $(ProjectOut)\include\$(dos:$(package)) mkdir $(ProjectOut)\include\$(dos:$(package))&#x0D;&#x0A;copy ..\$(dos:$(filename)) $(ProjectOut)\include\$(dos:$(package))&#x0D;&#x0A;)$(ifany:auxfiles:$(forall:auxfiles:if not exist $(ProjectOut)\$(dos:$(auxdir))\NUL mkdir $(ProjectOut)\$(dos:$(auxdir))\NUL &#x0D;&#x0A;copy ..\$(dos:$(filename)) $(ProjectOut)\$(dos:$(auxdir))\$(rootname)&#x0D;&#x0A;))"
+				CommandLine="$(forall:headers:if not exist $(ProjectOut)\include\$(dos:$(package)) mkdir $(ProjectOut)\include\$(dos:$(package))&#x0D;&#x0A;copy ..\$(dos:$(filename)) $(ProjectOut)\include\$(dos:$(package))&#x0D;&#x0A;)$(ifany:auxfiles:$(forall:auxfiles:if not exist $(ProjectOut)\$(dos:$(auxdir)) mkdir $(ProjectOut)\$(dos:$(auxdir)) &#x0D;&#x0A;copy ..\$(dos:$(filename)) $(ProjectOut)\$(dos:$(auxdir))\$(rootname)&#x0D;&#x0A;))"
 />
                         <Tool
 				Name="VCCustomBuildTool"
@@ -118,9 +121,10 @@ $(FileObject:lib)$(FilePattern:%.vcproj)<?xml version="1.0" encoding="Windows-12
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+                        AdditionalOptions="/MP"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="include\Win32;include$(ExtraInclude)"
+				AdditionalIncludeDirectories="include\Win32;include;..\..\build\include;..\..\build\include\Win32$(ExtraInclude)"
 				PreprocessorDefinitions="NDEBUG;_LIB;VISUAL_CPP;WIN32;RAVL_USE_GTK2=1;PROJECT_OUT=\&quot;$(subst:\:\\:$(ProjectOut))\&quot;"
 				StringPooling="true"
 				RuntimeLibrary="2"
@@ -129,10 +133,11 @@ $(FileObject:lib)$(FilePattern:%.vcproj)<?xml version="1.0" encoding="Windows-12
 				PrecompiledHeaderFile="$(ProjectOut)\win32\opt\obj\$(libname)/$(libname).pch"
 				AssemblerListingLocation="$(ProjectOut)\win32\opt\obj\$(libname)\"
 				ObjectFile="$(ProjectOut)\win32\opt\obj\$(libname)\"
-				ProgramDataBaseFileName="$(ProjectOut)\win32\opt\obj\$(libname)\"
+				ProgramDataBaseFileName="$(ProjectOut)\win32\opt\lib\$(libname).pdb"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="false"
 				SuppressStartupBanner="true"
+                        DisableSpecificWarnings="4996"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
